# ProgrammingForScientist

./: .gitignore  README.md
lessons/: README.md  lesson_01_fourier_transform.py  lesson_02_monte_carlo_integration.py  lesson_03_heat_equation.py  lesson_04_gradient_descent.py  lesson_05_sir_epidemic_model.py
lessons/fourier_pkg/: README.md  fourier_lesson.ipynb  pyproject.toml  setup.py
lessons/fourier_pkg/fourier_pkg/: __init__.py  core.py  utils.py  visualize.py
python/: 01_physics_as_code.ipynb  02_physical_regimes_with_conditionals.ipynb  03_loops_as_time_and_iteration.ipynb  04_arrays_as_fields_and_phase_space.ipynb  X01_floating_point_error_lab.ipynb
