# pyproject.toml - Modern Python package configuration
# This is the modern way to define package metadata and build system

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fourier-pkg"
version = "0.1.0"
description = "A teaching package for understanding Fourier Transform with visualization"
readme = "README.md"
authors = [
    {name = "ProgrammingForScientist", email = "author@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
]
keywords = ["fourier", "fft", "signal-processing", "education", "visualization"]

dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/HCOG/ProgrammingForScientist"
Documentation = "https://github.com/HCOG/ProgrammingForScientist#readme"
Repository = "https://github.com/HCOG/ProgrammingForScientist"

[tool.setuptools.packages.find]
where = ["."]
include = ["fourier_pkg*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
